--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,18 @@ html, body {
 #wrapper {
 	padding-top: 5px;
 	padding-bottom: 45px;
-	position: relative;
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;      /* TWEENER - IE 10 */
+	display: -webkit-flex;     /* NEW - Chrome */
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+	flex-direction: column;
 }
 
 #main {
 	position: relative;
 	min-height: 50px;
+	flex-grow: 1;
 }
 
 #main .picture.nav {
@@ -48,7 +54,11 @@ html, body {
 	bottom: 0;
 	width: 100px;
 	text-align: center;
-	display: flex;
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+	display: -ms-flexbox;      /* TWEENER - IE 10 */
+	display: -webkit-flex;     /* NEW - Chrome */
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	align-items: center;
 	justify-content: center;
 }
